welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: ';' expected but ',' found.
while (!estSurBiscuit()) {recule()},
                                   ^